; ModuleID = '/home/carl/AnghaBench/libgit2/tests/stash/extr_drop.c_retrieve_top_stash_id.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/stash/extr_drop.c_retrieve_top_stash_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@repo = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [10 x i8] c"stash@{0}\00", align 1
@GIT_REFS_STASH_FILE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @retrieve_top_stash_id(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32, i32* @repo, align 4
  %5 = call i32 @git_revparse_single(i32** %3, i32 %4, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0))
  %6 = call i32 @cl_git_pass(i32 %5)
  %7 = load i32*, i32** %2, align 8
  %8 = load i32, i32* @repo, align 4
  %9 = load i32, i32* @GIT_REFS_STASH_FILE, align 4
  %10 = call i32 @git_reference_name_to_id(i32* %7, i32 %8, i32 %9)
  %11 = call i32 @cl_git_pass(i32 %10)
  %12 = load i32*, i32** %2, align 8
  %13 = load i32*, i32** %3, align 8
  %14 = call i32 @git_object_id(i32* %13)
  %15 = call i32 @cl_assert_equal_oid(i32* %12, i32 %14)
  %16 = load i32*, i32** %3, align 8
  %17 = call i32 @git_object_free(i32* %16)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_revparse_single(i32**, i32, i8*) #1

declare dso_local i32 @git_reference_name_to_id(i32*, i32, i32) #1

declare dso_local i32 @cl_assert_equal_oid(i32*, i32) #1

declare dso_local i32 @git_object_id(i32*) #1

declare dso_local i32 @git_object_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
